secret_[delete, detail, restore]: Fix styling & spacing

--- a/teamvault/apps/secrets/static/css/secrets.css
+++ b/teamvault/apps/secrets/static/css/secrets.css
@@ -1,5 +1,13 @@
 .secret-list-icons {
+    width: 1%;
+}
+.secret-list-icons i {
     border-right: 0 solid #dddddd;
+    color: #c0c0c0;
+}
+
+.secret-list-icons i:hover {
+    color: #c0c0c0;
 }
 
 #password-field {
@@ -118,7 +126,7 @@
     color: #606060;
 }
 
-.secret-meta > .table>:not(caption)>*>* {
+.secret-meta > .table > :not(caption) > * > * {
     /* Overwrite bootstrap defaults */
     padding: 0.3rem 0.3rem;
 }
